# NotWordle

./: .gitignore  CMakeLists.txt  README.md  build.sh  cmake.yml
.github/workflows/: cmake.yml  workflow.yml
cmake/: CodeCoverage.cmake  Doxygen.cmake
doc/doxygen/: Doxyfile.in
doc/doxygen/html/: Color_8h.html  Color_8h_source.html  Dictionary_8h__dep__incl.map  Dictionary_8h__dep__incl.md5  Dictionary_8h__incl.md5  Grid_8h_source.html  Space_8h_source.html  Validity_8h.html  Validity_8h__dep__incl.md5  Validity_8h__incl.map  Validity_8h__incl.md5  Validity_8h_source.html  classes.html  classgame_1_1Dictionary-members.html  classgame_1_1Dictionary.html  classgame_1_1objects_1_1GameObject-members.html  classgame_1_1objects_1_1GameObject.html  classgame_1_1objects_1_1GameObject__inherit__graph.map  classgame_1_1objects_1_1GameObject__inherit__graph.md5  classgame_1_1objects_1_1Grid.html  classgame_1_1objects_1_1Grid__coll__graph.md5  classgame_1_1objects_1_1Grid__inherit__graph.map  classgame_1_1objects_1_1Grid__inherit__graph.md5  classgame_1_1objects_1_1Space-members.html  classgame_1_1objects_1_1Space.html  classgame_1_1objects_1_1Space__coll__graph.md5  classgame_1_1objects_1_1Space__inherit__graph.md5  dir_1120a2cbba3eb7743beaf25b010e1de3.html  dir_1120a2cbba3eb7743beaf25b010e1de3_dep.map  dir_1120a2cbba3eb7743beaf25b010e1de3_dep.md5  dir_c8fa4f8085c30851190068d6ed25ecce.html  dir_c8fa4f8085c30851190068d6ed25ecce_dep.map  files.html  functions.html  hierarchy.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  (+7 more)
doc/doxygen/html/search/: all_0.js  all_1.js  all_11.js  all_2.js  all_5.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  enums_0.js  files_1.js  files_2.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_a.js  functions_d.js  namespaces_0.js  searchdata.js
doc/doxygen/latex/: Color_8h.tex  Color_8h__incl.md5  Dictionary_8h__dep__incl.md5  Dictionary_8h__incl.md5  Validity_8h__incl.md5  classgame_1_1Dictionary.tex  classgame_1_1Game.tex  classgame_1_1objects_1_1GameObject__inherit__graph.md5  classgame_1_1objects_1_1Grid__coll__graph.md5  classgame_1_1objects_1_1Grid__inherit__graph.md5  classgame_1_1objects_1_1Space__coll__graph.md5  classgame_1_1objects_1_1Space__inherit__graph.md5  dir_1120a2cbba3eb7743beaf25b010e1de3.tex  dir_c8fa4f8085c30851190068d6ed25ecce.tex  dir_c8fa4f8085c30851190068d6ed25ecce_dep.md5  files.tex  hierarchy.tex  namespacegame_1_1color.tex  namespaces.tex  refman.tex
html/: Color_8h.html  Color_8h__incl.map  Color_8h__incl.md5  Dictionary_8h.html  Dictionary_8h__incl.map  Dictionary_8h_source.html  GameObject_8h_source.html  Game_8h_source.html  Validity_8h.html  Validity_8h__dep__incl.map  annotated.html  classgame_1_1Game-members.html  classgame_1_1Game.html  classgame_1_1objects_1_1Grid-members.html  classgame_1_1objects_1_1Space__coll__graph.map  dir_bfccd401955b95cf8c75461437045ac0.html  functions_func.html  graph_legend.html  index.html  menudata.js
html/search/: all_10.js  all_12.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  enums_1.js
inc/game/: Color.h  Dictionary.h  Game.h  Validity.h  Word.h
inc/game/objects/: GameObject.h  Grid.h  Space.h
latex/: Color_8h.tex  Dictionary_8h.tex  Validity_8h.tex  Validity_8h__dep__incl.md5  annotated.tex  classgame_1_1objects_1_1GameObject.tex  classgame_1_1objects_1_1Grid.tex  classgame_1_1objects_1_1Space.tex  dir_1120a2cbba3eb7743beaf25b010e1de3.tex  dir_c8fa4f8085c30851190068d6ed25ecce.tex  index.tex  refman.tex
src/: main.cpp
src/game/: Dictionary.cpp  Game.cpp  Word.cpp
src/game/objects/: Grid.cpp  Space.cpp
test/: CMakeLists.txt
test/game/: ColorTest.cpp  DictionaryTest.cpp  GameTest.cpp  ValidityTest.cpp  WordTest.cpp
test/game/objects/: GridTest.cpp  SpaceTest.cpp
